--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import GreenText from "../layouts/GreenText.astro";
 import Layout from "../layouts/Layout.astro";
 import twoDrImg from "src/assets/images/frame185565.jpg";
