--- a/src/components/footer/AppFooter.astro
+++ b/src/components/footer/AppFooter.astro
@@ -1,9 +1,12 @@
 ---
 import "primeflex/primeflex.css";
 import "primeicons/primeicons.css";
-import { Button } from "primereact/button";
-import { Divider } from "primereact/divider";
-import { InputText } from "primereact/inputtext";
+import * as button from "primereact/button/button.esm";
+const { Button } = button;
+import * as divider from "primereact/divider/divider.esm";
+const { Divider } = divider;
+import * as inputtext from "primereact/inputtext/inputtext.esm";
+const { InputText } = inputtext;
 import "primereact/resources/primereact.min.css";
 const backgroundColor = " rgba( 255, 255, 255, 1 )";
 ---
