--- a/src/components/navigation/AppTopBar.astro
+++ b/src/components/navigation/AppTopBar.astro
@@ -4,7 +4,8 @@ import Logo from "../../assets/images/rectangle43092.jpg";
 import LoginButton from "../authentication/LoginButton";
 import SearchIcon from "../search/SearchIcon.jsx";
 import AppTopBarMenu from "./AppTopBarMenu.jsx";
-import { Button } from "primereact/button";
+import * as button from "primereact/button/button.esm";
+const { Button } = button;
 ---
 
 <div
