--- a/src/components/providing/Providing.astro
+++ b/src/components/providing/Providing.astro
@@ -1,6 +1,6 @@
 ---
-import { Button } from "primereact/button";
-import img from "../../assets/images/frame185562.jpg";
+import * as button from "primereact/button/button.esm";
+const { Button } = button;
 ---
 
 <div class="col-12 h-full flex flex-column justify-content-center">
