--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -156,9 +156,9 @@ const { title } = Astro.props;
         height: 8vh;
       }
     </style>
-    <script>
-      import PrimeReact from "primereact/api";
-      PrimeReact.ripple = true;
-    </script>
+    <!-- <script>
+      // import PrimeReact from "primereact/api";
+      // PrimeReact.ripple = true;
+    </script> -->
   </body>
 </html>
