--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,8 +64,8 @@ import ThinksExplains from "../components/thinks/ThinksExplains";
       </div>
     </div>
   </div>
-  <div id="about" class="h-100 relative bg-providing">
-    <Providing />
+  <!-- <div id="about" class="h-100 relative bg-providing">
+    <Providing client:load />
   </div>
   <div id="product" class="h-80">
     <Product client:load />
@@ -74,7 +74,7 @@ import ThinksExplains from "../components/thinks/ThinksExplains";
     <Partner />
   </div><div id="policy" class="sub-bg">
     <ThinksExplains client:load />
-  </div>
+  </div> -->
 </Layout>
 
 <style>
